--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <div class="skillloaded2" data-aos="fade-right" data-aos-duration="300" data-aos-delay="300"></div>
                 </div>
                 <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                <img class="java" src="photos/java.png">
                 <div class="skillloader">
                     <div class="skillloaded3" data-aos="fade-right" data-aos-duration="300" data-aos-delay="300"></div>
                 </div>
@@ -77,7 +78,7 @@
                     Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
                     Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.
                 </p>
-                <img src="photos/html.png">
+                <img class="boombox" src="temp/boombox.png">
                 <p>Hudba lorem ipsum sum kalibum halabala sim si mum klorikam bum</p>
                 <img src="photos/html.png">
                 <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
