--- a/moreprojects.html
+++ b/moreprojects.html
@@ -13,11 +13,57 @@
             <a class="menuimgs" href="index.html"><img src="photos/menu2.png"></a>
         </div>
         <div class="sidemenu">
-            <a href="#kdojsem">Kdo jsem?</a>
-            <a href="#dovednosti">Dovendnosti</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#konicky">Koníčky</a>
-            <a href="#kontakt">Kontakt</a>
+            <a href="index.html#kdojsem">Kdo jsem?</a>
+            <a href="index.html#dovednosti">Dovendnosti</a>
+            <a href="index.html#portfolio">Portfolio</a>
+            <a href="index.html#konicky">Koníčky</a>
+            <a href="index.html#kontakt">Kontakt</a>
         </div>
+        <div class="site">
+            <div class="topp" >
+                <h2>Portfolio</h2>
+                <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
+                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
+                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
+                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
+                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                <img src="photos/web.gif">
+                <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
+                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
+                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
+                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
+                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                <img src="photos/Gamesssss.gif">
+                <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
+                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
+                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
+                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
+                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                <img src="photos/web.gif">
+                <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
+                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
+                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
+                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
+                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                <img src="photos/web.gif">
+                <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
+                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
+                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
+                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
+                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                <img src="photos/Gamesssss.gif">
+
+                <a href="moreprojects.html"><button>Prozkoumat více</button></a>
+            </div>
+            <div class="end">
+                <h3>By vojta</h3>
+            </div>
+        </div>
+        
     </body>
+    <script src="script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init()
+    </script>
 </html>
