--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
             </div>
             <div class="kdojsem" id="kdojsem">
                 <h2>Kdo jsem?</h2>
-                <img src="temp/blank-profile-picture-973460_1280.webp" data-aos="fade-up">
-                <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                <div class="kdojseminside">
+                    <img src="temp/blank-profile-picture-973460_1280.webp" data-aos="fade-up">
+                    <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                </div>
             </div>
             <div class="dovednosti" id="dovednosti">
                 <h2>Dovendnosti</h2>
@@ -56,19 +58,24 @@
             </div>
             <div class="portfolio" id="portfolio">
                 <h2>Portfolio</h2>
-                <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
-                <img src="photos/web.gif">
-                <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
-                <img src="photos/Gamesssss.gif">
-
+                <div class="portfolio-container">
+                    <div class="portfoliotab">
+                        <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
+                            Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
+                            Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
+                            Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
+                            Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                        <img src="photos/web.gif">
+                    </div>
+                    <div class="portfoliotab">
+                        <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
+                            Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
+                            Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
+                            Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
+                            Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                        <img src="photos/Gamesssss.gif">
+                    </div>
+                </div>
                 <a href="moreprojects.html"><button>Prozkoumat více</button></a>
             </div>
             <div class="konicky" id="konicky">
