--- a/index.html
+++ b/index.html
@@ -34,25 +34,32 @@
             </div>
             <div class="dovednosti" id="dovednosti">
                 <h2>Dovendnosti</h2>
-                
-                <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
-                <div class="html">
-                    <img src="photos/js.png" class="jsimg">
-                    <img src="photos/html.png" class="htmlimg">
-                    <img src="photos/css.png" class="cssimg">
-                </div>
-                <div class="skillloader">
-                    <div class="skillloaded1" data-aos="fade-right" data-aos-duration="300" data-aos-delay="300"></div>
-                </div>
-                <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
-                <img class="python" src="photos/python.png">
-                <div class="skillloader">
-                    <div class="skillloaded2" data-aos="fade-right" data-aos-duration="300" data-aos-delay="300"></div>
-                </div>
-                <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
-                <img class="java" src="photos/java.png">
-                <div class="skillloader">
-                    <div class="skillloaded3" data-aos="fade-right" data-aos-duration="300" data-aos-delay="300"></div>
+                <div class="container-skillholder">
+                    <div class="skillholder">
+                        <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                        <div class="html">
+                            <img src="photos/js.png" class="jsimg">
+                            <img src="photos/html.png" class="htmlimg">
+                            <img src="photos/css.png" class="cssimg">
+                        </div>
+                        <div class="skillloader">
+                            <div class="skillloaded1" data-aos="fade-right" data-aos-duration="300" data-aos-delay="300"></div>
+                        </div>
+                    </div>
+                    <div class="skillholder">
+                        <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                        <img class="python" src="photos/python.png">
+                        <div class="skillloader">
+                            <div class="skillloaded2" data-aos="fade-right" data-aos-duration="300" data-aos-delay="300"></div>
+                        </div>
+                    </div>
+                    <div class="skillholder">
+                        <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                        <img class="java" src="photos/java.png">
+                        <div class="skillloader">
+                            <div class="skillloaded3" data-aos="fade-right" data-aos-duration="300" data-aos-delay="300"></div>
+                        </div>
+                    </div>
                 </div>
                 <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
             </div>
