--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="index.css">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <link rel="icon" href="temp/vojta22.ico">
         <title>Vojtěch Úšela</title>
     </head>
     <body>
@@ -22,13 +23,17 @@
         <div class="site">
             <div class="top" id="top">
                 <h1>Vojtěch Úšela</h1>
-                <img>
-                <img>
+                <div class="hero-holder">
+                    <img class="vojta" src="temp/vojta11.png">
+                </div>
             </div>
             <div class="kdojsem" id="kdojsem">
                 <h2>Kdo jsem?</h2>
                 <div class="kdojseminside">
-                    <img src="temp/blank-profile-picture-973460_1280.webp" data-aos="fade-up">
+                    <div class="imgs" data-aos="fade-up">
+                        <img class="vojta-sit" src="temp/vojta33.png">
+                        <img src="temp/blank-profile-picture-973460_1280.webp">
+                    </div>
                     <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
                 </div>
             </div>
