updated home button added socials

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="header">
             <a class="menuimgs" id="menubutton" onclick="menu()"><img src="photos/menu2.png"></a>
-            <a class="menuimgs" href="#top"><img src="photos/menu2.png"></a>
+            <a href="#top"><img class="navvojta" src="temp/vojta22.png"></a>
         </div>
         <div class="sidemenu">
             <a href="#kdojsem">Kdo jsem?</a>
@@ -19,6 +19,14 @@
             <a href="#portfolio">Portfolio</a>
             <a href="#konicky">Koníčky</a>
             <a href="#kontakt">Kontakt</a>
+            <div class="socpic-container">
+                <a href="https://www.instagram.com/vojtau_/">
+                    <img class="socpic" src="temp/ig.png">
+                </a>
+                <a href="">
+                    <img class="socpic" src="temp/gh.png">
+                </a>
+            </div>
         </div>
         <div class="site">
             <div class="top" id="top">
