some work on responsivity

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="header">
             <a class="menuimgs" id="menubutton" onclick="menu()"><img src="photos/menu2.png"></a>
-            <a href="#top"><img class="navvojta" src="temp/vojta22.png"></a>
+            <a class="menuvojta" href="#top"><img class="navvojta" src="temp/vojta22.png"></a>
         </div>
         <div class="sidemenu">
             <a href="#kdojsem">Kdo jsem?</a>
@@ -23,7 +23,7 @@
                 <a href="https://www.instagram.com/vojtau_/">
                     <img class="socpic" src="temp/ig.png">
                 </a>
-                <a href="">
+                <a href="https://github.com/vojtaucz    ">
                     <img class="socpic" src="temp/gh.png">
                 </a>
             </div>
@@ -35,7 +35,7 @@
                     <div>
                         <img class="vojta" src="temp/vojta11.png">
                     </div>
-                    <div class="langarmy">
+                    <div class="langarmy"> 
                         <img src="photos/langarmy.png" class="langarmy">
                     </div>
                 </div>
@@ -81,7 +81,7 @@
                 </div>
                 <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
             </div>
-            <div class="portfolio" id="portfolio">
+            <div class="portfolio" id="portfolio" data-aos="fade-up">
                 <h2>Portfolio</h2>
                 <div class="portfolio-container">
                     <div class="portfoliotab">
@@ -124,7 +124,7 @@
                 <form id="kontakt-formular">
                     <input class="jmeno" type="text" name="jmeno" placeholder="Jméno" required>
                     <input class="email" type="email" name="email" placeholder="Email" required>
-                    <input class="text" type="text" name="text" placeholder="Stručný požadavek" required>
+                    <textarea class="text" type="text" rows="15" name="text" placeholder="Stručný požadavek" required></textarea>
                     <button type="submit">Poslat</button>
                 </form>
             </div>
