--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                         <img class="vojta-sit" src="temp/vojta33.png">
                         <img src="temp/blank-profile-picture-973460_1280.webp">
                     </div>
-                    <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                    <div class="text-container">
+                        <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                    </div>
                 </div>
             </div>
             <div class="dovednosti" id="dovednosti">
