--- a/moreprojects.html
+++ b/moreprojects.html
@@ -10,14 +10,22 @@
     <body>
         <div class="header">
             <a class="menuimgs" id="menubutton" onclick="menu()"><img src="photos/menu2.png"></a>
-            <a class="menuimgs" href="index.html"><img src="photos/menu2.png"></a>
+            <a class="menuimgs" href="index.html"><img class="navvojta" src="temp/vojta22.png"></a>
         </div>
         <div class="sidemenu">
-            <a href="index.html#kdojsem">Kdo jsem?</a>
+            <a href="index.html#">Kdo jsem?</a>
             <a href="index.html#dovednosti">Dovendnosti</a>
             <a href="index.html#portfolio">Portfolio</a>
             <a href="index.html#konicky">Koníčky</a>
             <a href="index.html#kontakt">Kontakt</a>
+            <div class="socpic-container">
+                <a href="https://www.instagram.com/vojtau_/">
+                    <img class="socpic" src="temp/ig.png">
+                </a>
+                <a href="https://github.com/vojtaucz    ">
+                    <img class="socpic" src="temp/gh.png">
+                </a>
+            </div>
         </div>
         <div class="site">
             <div class="topp" >
