--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                         <img class="vojta-sit" src="temp/vojta33.png">
                         <img src="temp/blank-profile-picture-973460_1280.webp">
                     </div>
-                    <div class="text-container">
-                        <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                    <div class="text-container-1">
+                        <p>Jmenuju se Vojtěch Úšela a jsem IT student na škole CHC ve Zlíně a už dětsví se zajímám o informační technologie.</p>
                     </div>
                 </div>
             </div>
@@ -56,50 +56,59 @@
                 <h2>Dovendnosti</h2>
                 <div class="container-skillholder">
                     <div class="skillholder">
-                        <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
                         <div class="html">
                             <img src="photos/js.png" class="jsimg">
                             <img src="photos/html.png" class="htmlimg">
                             <img src="photos/css.png" class="cssimg">
+                        </div>
+                        <div class="text-container-2">
+                            <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
                         </div>
                         <div class="skillloader">
                             <div class="skillloaded1" data-aos="fade-right" data-aos-duration="300" data-aos-delay="300"></div>
                         </div>
                     </div>
                     <div class="skillholder">
-                        <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
                         <img class="python" src="photos/python.png">
+                        <div class="text-container-2">
+                            <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                        </div>
                         <div class="skillloader">
                             <div class="skillloaded2" data-aos="fade-right" data-aos-duration="300" data-aos-delay="300"></div>
                         </div>
                     </div>
                     <div class="skillholder">
-                        <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
                         <img class="java" src="photos/java.png">
+                        <div class="text-container-2">
+                            <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                        </div>
                         <div class="skillloader">
                             <div class="skillloaded3" data-aos="fade-right" data-aos-duration="300" data-aos-delay="300"></div>
                         </div>
                     </div>
                 </div>
-                <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                <div class="text-container-3">
+                    <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                </div>
             </div>
             <div class="portfolio" id="portfolio" data-aos="fade-up">
                 <h2>Portfolio</h2>
                 <div class="portfolio-container">
                     <div class="portfoliotab">
-                        <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                            Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                            Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                            Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                            Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                        <div class="text-container-2">
+                            <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                        </div>
                         <img src="photos/web.gif">
                     </div>
                     <div class="portfoliotab">
-                        <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                            Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                            Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                            Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                            Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                        <div class="text-container-2">
+                            <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                        </div>
+                    </div>
+                    <div class="portfoliotab">
+                        <div class="text-container-2">
+                            <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                        </div>
                         <img src="photos/Gamesssss.gif">
                     </div>
                 </div>
@@ -107,21 +116,20 @@
             </div>
             <div class="konicky" id="konicky">
                 <h2>Koníčky</h2>
-                <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                    Nunc tincidunt  ante vitae massa. 
-                    Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.
-                </p>
-                <img class="boombox" src="temp/boombox.png">
-                <p>Hudba lorem ipsum sum kalibum halabala sim si mum klorikam bum</p>
-                <img src="photos/html.png">
-                <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                    Nunc tincidunt  ante vitae massa. 
-                    Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.
-                </p>
+                <div class="konicky-container">
+                    <div class="text-container-4">
+                        <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                    </div>
+                    <img class="boombox" src="temp/boombox.png">
+                </div>
+                <div class="konicky-container-2">
+                    <div class="text-container-4">
+                        <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                    </div>
+                    <img class="Programing" src="temp/blank-profile-picture-973460_1280.webp">
+                </div>
             </div>
-            <div class="kontakt" id="kontakt">
+            <div class="kontakt" id="kontakt" data-aos="fade-up">
                 <h2>Formulář</h2>
                 <form id="kontakt-formular">
                     <input class="jmeno" type="text" name="jmeno" placeholder="Jméno" required>
