--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="sidemenu">
             <a href="#kdojsem">Kdo jsem?</a>
-            <a href="#dovednosti">Dovendnosti</a>
+            <a href="#dovednosti">Dovednosti</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#konicky">Koníčky</a>
             <a href="#kontakt">Kontakt</a>
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="dovednosti" id="dovednosti">
-                <h2>Dovendnosti</h2>
+                <h2>Dovednosti</h2>
                 <div class="container-skillholder">
                     <div class="skillholder">
                         <div class="html">
@@ -116,13 +116,13 @@
             </div>
             <div class="konicky" id="konicky">
                 <h2>Koníčky</h2>
-                <div class="konicky-container" data-aos="fade-up">
+                <div class="konicky-container" data-aos="fade-right">
                     <div class="text-container-4">
                         <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
                     </div>
                     <img class="boombox" src="temp/boombox.png" >
                 </div>
-                <div class="konicky-container-2" data-aos="fade-up">
+                <div class="konicky-container-2" data-aos="fade-left">
                     <div class="text-container-4">
                         <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
                     </div>
